# rlib-Sounds

./: .gitmodules  LICENSE  README.md  package-lock.json  package.json
examples/next-demo/: package.json
examples/next-demo/app/: globals.css  page.tsx
examples/next-demo/app/models/: AudioPlayer.ts
examples/react-demo/: eslint.config.js  index.html  package.json  vite.config.ts
examples/react-demo/src/: App.tsx  index.css
examples/rlibmml-node/src/: index.ts
examples/smftowav-node/: README.md  package.json
examples/smftowav-node/src/: index.ts
rlib-MML/npmpackage/: LICENSE  README.md  package.json  tsconfig.json
rlib-MML/npmpackage/scripts/: build-wasm.js
rlib-MML/npmpackage/src/: core.ts  index.ts
rlib-SoundFont/npmpackage/: LICENSE  README.md  package.json  tsup.config.ts
rlib-SoundFont/npmpackage/src/: index.ts  worker.ts
rlib-SoundFont/src/: CMakeLists.txt  sfinfo.cpp  smftowav.cpp
rlib-SoundFont/src/base/: Riff.h  String.h
rlib-SoundFont/src/json/: Json.h
rlib-SoundFont/src/sequencer/: MidiEvent.h  MidiModule.h  Smf.cpp  Smf.h  SmfToWav.h  Soundfont.h  SoundfontInfo.h  SoundfontMidiModule.h  SoundfontRenderer.h  TempoList.h  Wav.h
rlib-SoundFont/src/wasm/: CMakeLists.txt  README.md  main.cpp
rlib-SoundFont/src/wasm-usethread/: CMakeLists.txt  main.cpp  test.html
